# solana-program-sdk-zig

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REVIEW.md  ROADMAP.md  TODO.md  build-solana-zig.sh  build.zig  build.zig.zon
.opencode/: config.json
anchor/: CHANGELOG.md  README.md  ROADMAP.md  build.zig  build.zig.zon
bench-pinocchio/: Cargo.toml
bench-pinocchio/src/: lib.rs
benchmark/: .gitignore  Cargo.toml  build.zig  build.zig.zon  create_rent_exempt.zig  create_rent_exempt_comptime.zig  noop_callee.zig  parse_accounts.zig  parse_accounts_with.zig  parse_accounts_with_owner_only.zig  parse_accounts_with_signer_only.zig  parse_accounts_with_unchecked.zig  parse_accounts_with_writable_only.zig  pda_comptime.zig  pda_runtime.zig  program_entry_1.zig  program_entry_lazy_1.zig  pubkey_cmp_any_2.zig  pubkey_cmp_comptime.zig  pubkey_cmp_fast.zig  pubkey_cmp_raw.zig  pubkey_cmp_runtime_const.zig  pubkey_cmp_safe.zig  pubkey_cmp_safe_raw.zig  pubkey_cmp_unchecked.zig  spl_token_approve_checked_multisig.zig  spl_token_batch_transfer_checked.zig  spl_token_batch_transfer_checked_prepared.zig  spl_token_burn_multisig.zig  spl_token_initialize_multisig.zig  spl_token_initialize_multisig2.zig  spl_token_mint_to_checked_multisig.zig  spl_token_mint_to_checked_signed.zig  spl_token_mint_to_checked_signed_single.zig  spl_token_transfer_checked_multisig.zig  system_transfer_with_seed_signed.zig  system_transfer_with_seed_signed_single.zig  sysvar_copy.zig  sysvar_ref.zig  token_dispatch_bind_only.zig  (+7 more)
client/: build.zig  build.zig.zon
docs/: ANCHOR_COMPATIBILITY.md  COMPUTE_BUDGET.md  DEPLOYMENT.md  ERROR_HANDLING.md  TESTING.md  TOKEN_PROGRAMS.md  deployment-guide.md  solana-abi.md
examples/: README.md  anchor_ata_init.zig  anchor_cpi_context.zig  anchor_event_emission.zig  anchor_memo_cpi.zig  anchor_pda_dependencies.zig  anchor_sysvar_data.zig  anchor_token_cpi.zig  arraylist_example.zig  batch_proof.zig  counter.zig  cpi.zig  escrow.zig  hello.zig  mock_adapter.zig  mock_router.zig  mock_transfer_hook.zig  pubkey.zig  quicksort_example.zig  token_dispatch.zig  vault.zig
examples/programs/: Cargo.toml  build.zig  build.zig.zon
examples/programs/counter/: main.zig
examples/programs/counter_simple/: main.zig
examples/programs/counter_typed/: main.zig
examples/programs/hello_world/: main.zig
examples/programs/tests/: counter.rs  hello_world.rs  transfer_lamports.rs
examples/programs/transfer_lamports/: main.zig
idl/: anchor.json
program-test/: .gitignore  Cargo.toml  build.zig  build.zig.zon  test.sh
program-test/cpi/: main.zig
program-test/integration/: build.zig  build.zig.zon  test_pubkey.zig
program-test/pubkey/: main.zig
program-test/src/: lib.rs
program-test/tests/: counter.rs  cpi.rs  escrow.rs  hello.rs  mock_router.rs  pubkey.rs  spl_ata.rs  spl_memo.rs  spl_token.rs  token_2022.rs  transfer_hook.rs
scripts/: bench-results.md  bench.sh  bootstrap.sh  build-bpf.sh  ensure-elf2sbpf.sh  ensure-solana-zig.sh  install-solana-zig.sh
sdk/: build.zig  build.zig.zon
src/: account.zig  account_cursor.zig  address_lookup_table.zig  allocator.zig  alt_bn128.zig  big_mod_exp.zig  blake3.zig  bls_signatures.zig  bn254.zig  bpf.zig  bpf_loader.zig  clock.zig  (+66 more)
template/hello-world/program-test/: Cargo.toml  build.zig  build.zig.zon.in  test.sh
template/hello-world/program-test/tests/: hello_world.rs
(+374 files in other folders)
