[package]
authors = ["Jon C <me@jonc.dev>"]
description = "Solana-SDK Zig Program Test"
edition = "2021"
license = "Apache-2.0"
name = "solana-sdk-zig-program-test"
repository = "https://github.com/joncinque/solana-sdk-zig"
version = "0.0.1"

[dependencies]
bincode = "1.3"
blake3 = "1.5"
borsh = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "3.0.0"
solana-nonce = { version = "3.0.0", features = ["serde"] }
solana-epoch-schedule = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-keccak-hasher = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-loader-v3-interface = { version = "3.0.0", features = ["bincode"] }
solana-transaction-error = "3.0.0"
solana-stake-interface = { version = "2.0.2", features = ["bincode"] }
solana-address-lookup-table-interface = { version = "3.0.0", features = ["bincode"] }
solana-loader-v4-interface = { version = "2.0.0", features = ["bincode"] }
solana-vote-interface = { version = "3.0.0", features = ["bincode"] }
solana-message = { version = "3.0.0", features = ["bincode"] }
solana-slot-hashes = "3.0.0"
solana-epoch-rewards = "3.0.0"
solana-last-restart-slot = "3.0.0"
solana-secp256r1-program = "3.0.0"

[dev-dependencies]
num_enum = "0.7"
mollusk-svm = "0.7"

[[bin]]
name = "generate-vectors"
path = "src/bin/generate_vectors.rs"
