[package]
authors = ["Jon C <me@jonc.dev>"]
description = "Solana-SDK Zig Program Test"
edition = "2021"
license = "Apache-2.0"
name = "solana-sdk-zig-program-test"
repository = "https://github.com/joncinque/solana-sdk-zig"
version = "0.0.1"

[dev-dependencies]
num_enum = "0.7"
mollusk-svm = "0.7"
mollusk-svm-programs-memo = "0.7"
solana-account = "3.0.0"
solana-instruction = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-sha256-hasher = "3.0.0"
