[package]
authors = ["DaviRain Su"]
description = "Hello-world starter integration test"
edition = "2021"
license = "Apache-2.0"
name = "hello-world-template-program-test"
version = "0.1.0"

[dev-dependencies]
mollusk-svm = "0.7"
solana-instruction = "3.0.0"
solana-pubkey = "3.0.0"
solana-sdk-ids = "3.0.0"
